z-index order fix

--- a/css/unit-list.css
+++ b/css/unit-list.css
@@ -4,7 +4,7 @@
     left: 0;
     width: min-content;
     height: min-content;
-    z-index: 10;
+    z-index: 80;
     background-color: var(--highlight-content);
     border-radius: 5vh 5vh 0 0;
     transition: bottom 0.2s ease;
